@@ -8,6 +8,7 @@ sunuo (0.3.2) unstable; urgency=low
     - use log4net for logging
     - removed Address from ServerList
     - default to server list from Config.GameServerListConfig
+    - get server name from Config.ServerName
 
  --
 
